--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.71.4",
-    "react-native-gesture-handler": "^2.9.0",
+    "react-native": "0.71.6",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-web": "^0.18.12"
