--- a/package.json
+++ b/package.json
@@ -18,15 +18,17 @@
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.5",
     "expo-camera": "~13.2.1",
+    "expo-image-picker": "~14.1.1",
+    "expo-media-library": "~15.2.3",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "^0.18.12",
-    "react-native-reanimated": "~2.14.4"
+    "react-native-web": "^0.18.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
