--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.5",
+    "expo-barcode-scanner": "~12.3.2",
     "expo-camera": "~13.2.1",
+    "expo-face-detector": "~12.1.1",
     "expo-image-picker": "~14.1.1",
     "expo-media-library": "~15.2.3",
     "expo-status-bar": "~1.4.4",
