--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "1.3.2",
     "react-native-maps-directions": "^1.9.0",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
