--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "axios": "^1.4.0",
     "expo": "~48.0.5",
     "expo-barcode-scanner": "~12.3.2",
     "expo-camera": "~13.2.1",
