--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^18.0.2",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-masked-view/masked-view": "0.2.8",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
@@ -18,6 +19,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "expo": "~48.0.5",
     "expo-barcode-scanner": "~12.3.2",
     "expo-camera": "~13.2.1",
