--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
     "expo": "~48.0.5",
     "expo-barcode-scanner": "~12.3.2",
     "expo-camera": "~13.2.1",
+    "expo-constants": "~14.2.1",
+    "expo-device": "~5.2.1",
     "expo-face-detector": "~12.1.1",
     "expo-image-picker": "~14.1.1",
     "expo-location": "~15.1.1",
     "expo-media-library": "~15.2.3",
+    "expo-notifications": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "lottie-react-native": "5.1.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
