--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@react-native-masked-view/masked-view": "0.2.8",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
-    "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.4.0",
@@ -37,15 +36,14 @@
     "react-dom": "^18.2.0",
     "react-native": "0.71.8",
     "react-native-calendars": "^1.1300.0",
-    "react-native-gesture-handler": "~2.9.0",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "1.3.2",
     "react-native-maps-directions": "^1.9.0",
     "react-native-picker-select": "^8.0.4",
-    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "^0.18.12"
+    "react-native-web": "^0.18.12",
+    "expo-sensors": "~12.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
